# dili-rucam-agents

./: .gitignore  README.md  agent.md  hello.py  pyproject.toml
examples/: report.txt
examples/latest_reports/: arbiter_report.md  gemini-3.0_report.md  gpt-5.2_report.md
src/crew/: rucam_production_crew.py  tools.py
src/dili_rucam_agents/: __init__.py  pipeline.py
src/dili_rucam_agents/crew/: agents.py  crew.py  tasks.py
src/dili_rucam_agents/ingestion/: build_bundle.py  case_bundle.py  pdfplumber_tables.py  pymupdf_fallback.py  unstructured_ingest.py
src/dili_rucam_agents/prompts/: arbiter_production.md  rucam_analysis_production.md
src/dili_rucam_agents/validators/: rucam_json.py
tests/: test_agents.py  test_bundle_schema.py  test_ingestion.py  test_rucam_json_validator.py
