[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dili-rucam-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[anthropic,google-genai,tools]>=1.8.1",
    "langchain-community>=0.3.29",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "pdfplumber>=0.11.4",
    "PyMuPDF>=1.24.10",
    "unstructured[local-inference]>=0.15.11",
    "python-dotenv>=1.1.1",
    "pytest>=8.3.3",
    "litellm>=1.52.0",
    "fastapi>=0.128.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
